Fixed horizontal scroll

--- a/src/sass/elements/_elements.body.scss
+++ b/src/sass/elements/_elements.body.scss
@@ -3,6 +3,7 @@ body {
   border-top: 4px solid $pf-pink;
   background: url('../img/bcg.jpg');
   background-size: 60%;
+  max-width: 100vw;
 }
 
 .star {
